--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
             </div>
             <div class="portfolie_img  reveal">
-                <img src="img/website.png" alt="website">
+                <img src="img/website.webp" alt="website">
             </div>
 
 
@@ -142,26 +142,25 @@
             <div class="column1 reveal">
                 <p class="reveal"> Temaopgaven bestod af, at designe og lave mit eget site om et valgfrit emne. Her
                     valgte jeg at lave en site om mine
-                    yndlings blomster. Til denne site valgte jeg stilarten modernisme og herunder minimalisme. Min
-                    komposition består derfor
-                    at få elementer og et stærkt blikfandt med mine billeder og stor header. Udtrykket er harmonisk med
-                    simple former og
-                    rene kontrastfulde farver, minimalistisk med et dramatisk brug af typografi. Gestaltlovene kommer
-                    også til udtryk på mit
-                    site, blandt andet gennem loven om kontinuitet som jeg bruger med linjer som adskiller min tekst og
-                    billede. Loven om
-                    nærhed er også til stede hvis man kigger på placeringen af mine overskrifter og tekst nedenunder.
-                    Dette hjælper brugeres
-                    til at opfatte elementerne som relateret til hinanden. Sitet er opbygget med grids for effektivt at
-                    kunne organisere mit
-                    indhold, uden at skulle tilføje ekstra visuelle elementer. Billederne er på samme måde, som resten
-                    af sitet forsøgt at
-                    holde minimalistisk og enkle. Dette relaterer sig også til loven om lighed ved at alle mine sites
-                    ligner hinanden, med
-                    samme former, farver og størrelser. Jeg valgte bevidst at alle mine tekster skulle stå med små
-                    bogstaver, da jeg synes
-                    det gik godt hånd i hånd med resten af mit site. Det var med til at underbygge den minimalistiske
-                    stil sitet har.
+                    yndlings blomster. Dette site besidder stilarten modernisme og herunder minimalisme. Kompositionen
+                    består af få
+                    elementer og et stærkt blikfang med mine billeder og stor header. Udtrykket er harmonisk med simple
+                    former, rene
+                    kontrastfulde farver, minimalistisk men med et dramatisk brug af typografi. Gestaltlovene kommer til
+                    udtryk på sitet med
+                    blandt andet loven om kontinuitet med linjer som adskiller tekst og billede. Loven om nærhed er også
+                    til stede hvis man
+                    kigger på placeringen af overskrifter og brødtekst. Dette hjælper brugeren til at opfatte
+                    elementerne som relateret til
+                    hinanden. Sitet er opbygget med grids for effektivt at kunne organisere mit indhold, uden at skulle
+                    tilføje ekstra
+                    visuelle elementer. Billederne er på samme måde, som resten af sitet forsøgt at holde minimalistisk
+                    og enkle. Dette
+                    relaterer sig også til loven om lighed ved at alle siderne ligner hinanden, med samme former, farver
+                    og størrelser. Jeg
+                    valgte bevidst at alle mine tekster skulle stå med små bogstaver, da jeg synes det gik godt hånd i
+                    hånd med resten af
+                    mit site. Det var med til at underbygge den minimalistiske stil sitet har.
                 </p>
 
                 <a class="knap" href="https://louisekrejler.dk/kea/02_web/02_emnesite/emnesite/" target="_blank"> Link
@@ -172,12 +171,12 @@
                 </a>
             </div>
             <div class="portfolie_img  reveal">
-                <img src="img/emnesite_3.png" alt="">
+                <img src="img/emnesite_1.webp" alt="">
             </div>
 
 
         </div>
-        <img class="portfolie_img reveal" src="img/emnesite_2.png" alt="">
+        <img class="portfolie_img reveal" src="img/emnesite_2.webp" alt="">
 
 
         <div id="ux">
@@ -216,18 +215,14 @@
                     individer som stræber
                     efter en tidsløs garderobe, som består af elementer som de kan bruge igen og igen. Min målgruppe
                     ligger til baggrund fra
-                    blandt andet min observation, hvor jeg observerede at det ikke kun var det ene eller det andet køn,
-                    som gik i basic
-                    fashion. Ved hjælp af min survey kom jeg også frem til, at et flertal lagde mest vægt på at købe
-                    basic varer end at købe
-                    statement pieces. Produkterne til siden består af t-shirt, sweatshirt og poloer. Under alle
-                    produkter kan man vælge
-                    hvilket fit produktet skal have og hvilken farve. At kunne vælge hvordan den skal fitte var et
-                    bevidst valg, da jeg
-                    under min research fandt ud af, at mange allerede ejer basic t-shirt men at de ikke sidder præcis
-                    som man ønsker og
-                    derfor ikke bliver brugt tilstrækkeligt nok. Min USP lyder derfor også som følgende: Basic t-shirts,
-                    sweatshirt og
+                    blandt andet min observation. Produkterne til siden består af t-shirt, sweatshirt og poloer. Under
+                    alle produkter kan
+                    man vælge hvilket fit produktet skal have og hvilken farve. At kunne vælge hvordan den skal fitte
+                    var et bevidst valg,
+                    da jeg under min research fandt ud af, at mange allerede ejer basic t-shirt men at de ikke sidder
+                    præcis som man ønsker
+                    og derfor ikke bliver brugt tilstrækkeligt nok. Min USP lyder derfor også som følgende: Basic
+                    t-shirts, sweatshirt og
                     poloer i lige præcis det fit du vil have og den farve du ønsker. Mit site er med til at spare folk
                     for at søge
                     internettet rundt for at finde lige præcis den rigtige trøje, med det rigtige fit. På mit site kan
@@ -244,12 +239,12 @@
                 </a>
             </div>
             <div class="portfolie_img reveal">
-                <img src="img/loesning_1.png" alt="">
+                <img src="img/loesning_1.webp" alt="">
             </div>
 
         </div>
         <div class="portfolie_img reveal">
-            <img src="img/loesning_2.png" alt="">
+            <img src="img/loesning_2.webp" alt="">
         </div>
 
         <div id="animation">
@@ -284,7 +279,12 @@
                     elementerne. Stilen på mit spil er kendetegnet ved flat design, da mine elementer er enkle med en
                     minimalistisk
                     tegnestil. Jeg har brugt lyse farver, simple former, få detaljer, minimale teksturer og en let
-                    læselig skrift.
+                    læselig skrift. Mit spil
+                    består af CSS animationer såsom drop, drej, forsvind og timer. Disse er sammen med JavaScript med
+                    til at skabe mine
+                    animationer til mit spil, som gør elementerne kan falde, dreje, forsvinde og samtidig have en timer
+                    i toppen og flere
+                    andre ting.
                 </p>
                 <a class="knap" href="https://louisekrejler.dk/kea/04_animation/website/spil.html" target="_blank"> Link
                     til site
@@ -292,11 +292,11 @@
 
             </div>
             <div class="portfolie_img reveal">
-                <img src="img/temaopgave_1.png" alt="">
+                <img src="img/temaopgave_1.webp" alt="">
             </div>
         </div>
         <div class="portfolie_img reveal">
-            <img src="img/temaopgave_2.png" alt="">
+            <img src="img/temaopgave_2.webp" alt="">
         </div>
 
         <div id="indhold">
@@ -324,11 +324,13 @@
                     redigerede individuelt. Sidens
                     design er klassisk og rent. På siden møder man ved første øjekast min video som jeg har redigeret.
                     Det første billede på
-                    videoen er sort hvid, men med en lys og fangede gul skrift til at bryde fokusset og fange brugerens
-                    opmærksomhed til
-                    teksten. Denne stil fortsætter når man scroller ned af siden, med billeder fra location som også er
-                    sort og hvid. Dette
-                    valgte jeg for at holde siden klassisk og minimalistisk.
+                    videoen er sort hvid, men med en lys og fangede gul skrift til at skabe blikfang og derved fange
+                    brugerens opmærksomhed
+                    til teksten. Denne stil fortsætter når man scroller ned af siden, med billeder fra location som også
+                    er sort og hvid.
+                    Dette valgte jeg for at holde siden klassisk og minimalistisk. Sitets komposition er delt op i to
+                    kolonner, hvor
+                    nederste billede fylder to rækker.
                 </p>
                 <a class="knap" href="https://loui47p3.github.io/pilotsite/" target="_blank"> Link
                     til site
@@ -338,7 +340,7 @@
                 </a>
             </div>
             <div class="portfolie_img reveal">
-                <img src="img/pilotsite.png" alt="">
+                <img src="img/pilotsite.webp" alt="">
             </div>
 
         </div>
@@ -347,19 +349,19 @@
             <div class="column1 reveal">
                 <p class="reveal"> Redesign opgaven lavede jeg i samarbejde med 3 andre fra holdet. Vi valgte at
                     redesigne Tealicious - et bubbletea firma
-                    - egen hjemmeside. Vi brugte researchmetoder fra grundlæggende UX tema 3, hvor vi undersøgte
+                    - egen hjemmeside. Vi brugte researchmetoder fra grundlæggende UX tema 3, her undersøgte vi
                     virksomhedens nuværende
-                    website og koncept. Brandet fokuserer på bubbletea og snacks og har en målgruppe på unge mellem
-                    12-30. Tealicious prøver
-                    gennem deres hjemmeside at fortælle om bubbletea og at det er sjovt og lækkert. I vores idéudvikling
+                    website og koncept. Brandet fokuserer på deres råvarer og har en målgruppe på unge mellem 12-30.
+                    Tealicious prøver
+                    gennem deres hjemmeside at fortælle om bubbletea, at det er sjovt og lækkert. I vores idéudvikling
                     fokuserede vi på at
-                    gøre hjemmesiden nemmere tilgængelig, sammenhængende og sjov. Vi lavede wireframes, moodboards og et
-                    styletile. Vi
-                    holdte fast i det meste af det originale copy, vi fokuserede mest på at ændre tonen i copy og gøre
-                    den sjovere og mere i
-                    øjenhøjde med de kunder de har. Microcopy ændrede vi en del på, da vi ville forsøge at gøre
-                    hjemmesiden mere klar og
-                    præcis.
+                    gøre hjemmesiden nemmere tilgængelig, sammenhængende og sjov. Dette valgte vores BERT test på deres
+                    nuværende
+                    hjemmeside. Vi lavede wireframes, moodboards og et styletile. Vi holdte fast i det meste af det
+                    originale copy, vi
+                    fokuserede mest på at ændre tonen i copy og gøre den sjovere og mere i øjenhøjde med de kunder de
+                    har. Microcopy ændrede
+                    vi en del på, da vi ville forsøge at gøre hjemmesiden mere klar og præcis.
                 </p>
                 <a class="knap" href="https://juli81n7.github.io/tealicious/" target="_blank"> Link
                     til site
@@ -369,15 +371,18 @@
                 </a>
             </div>
             <div class="portfolie_img reveal">
-                <img src="img/redesign_1.png" alt="">
+                <img src="img/redesign_1.webp" alt="">
             </div>
 
         </div>
         <div class="portfolie_img reveal">
-            <img src="img/redesign_2.png" alt="">
+            <img src="img/redesign_2.webp" alt="">
         </div>
 
-        <div id="portfolio" class="scrolling_text reveal">
+        <div id="portfolio">
+        </div>
+
+        <div class="scrolling_text reveal">
             <h1 class="h1_portfolie reveal">
                 PORTFOLIO EKSAMEN
             </h1>
@@ -386,22 +391,46 @@
         <h3 class="h3_portfolie reveal">Portfolio eksamen</h3>
         <div class="two_columns reveal">
             <div class="column1 reveal">
-                <p class="reveal"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia eveniet corporis
-                    nostrum voluptatibus
-                    autem voluptas dicta soluta officia accusamus, commodi, ipsa, nulla veritatis sit reiciendis
-                    quo.
-                    Saepe
-                    dicta magnam porro!</p>
-                <a class="knap" href="https://louisekrejler.dk/kea/02_web/02_emnesite/emnesite/" target="_blank"> Link
-                    til site
-                </a>
-                <a class="knap" href="https://louisekrejler.dk/kea/02_web/02_emnesite/emnesite/" target="_blank"> Link
-                    til site
+                <p class="reveal"> Min portfolio site blev udarbejdet gennem blandt andet moodboards, mockups,
+                    wireframes og layoutdiagrammer. Sitet hører
+                    under modernisme med få elementer, primær farver og simple former. Kompositionen indeholder få
+                    elementer og på forsiden
+                    er der ved hjælp af farvekontraster og størrelseskontraster skabt blikfang og interesse. Resten af
+                    siden er delt op på
+                    to kolonner med beskrivelser af hvert opgave. Billederne er holdt minimalistiske og rene for at
+                    passe ind til designet
+                    på resten af sitet. Layoutet er responsivt til desktop og til mobil. De gennemgående farver på sitet
+                    er orange, en
+                    støvet hvid og en accentfarve i form af en frisk lyserød farve som deler kolonnerne i layoutet.
+                    Overskriften på forsiden
+                    er sat i en sans-serif skrift og er kun farvet i outlinen. Den er kraftig og stor og føles næsten
+                    som om det bliver råbt
+                    til en. Overskriften bliver brudt i midten med en serif skrift som er med til at skabe en kontrast
+                    på sitet og giver en
+                    mere interessant weboplevelse. Overskrifterne på resten af siden står alle i en serif skrift hvor
+                    brødteksten er med en
+                    sans-serif tekst. Det hjælper til at gøre den nemmere læselig - det samme med knapperne. Gestaltlove
+                    som der blandt
+                    andet kommer til udtryk er loven om nærhed. Dette gør den gennem afstanden på de forskellige
+                    elementer. Afstanden mellem
+                    overskrift, brødtekst og billeder er alt sammen med til at fortælle at der er en sammenhæng. Loven
+                    om lighed er også
+                    relevant, da den er med til at fortælle hvilke elementer der er overskrifter, læsetekst og links, da
+                    alt dette er
+                    grupperet ens på hele sitet.</p>
+                <a class="knap" href="https://xd.adobe.com/view/5b29d12f-a8af-46da-841a-3a5692d80e07-0e7a/"
+                    target="_blank"> Se mere
                 </a>
             </div>
             <div class="portfolie_img reveal">
-                <img src="img/portfolio.png" alt="">
+                <img src="img/portfolio_1.webp" alt="">
             </div>
+        </div>
+        <div class="portfolie_img reveal">
+            <img src="img/portfolio_2.webp" alt="">
+        </div>
+        <div class="portfolie_img reveal">
+            <img src="img/moodboard_styletile.webp" alt="">
         </div>
 
 
