--- a/index.html
+++ b/index.html
@@ -71,9 +71,8 @@
         <h3 class="h3_portfolie reveal">Louise Krejler</h3>
         <div class="two_columns reveal">
             <div class="column1 reveal">
-                <p class="reveal"> Jeg hedder Louise og jeg er 22 år gammel. Jeg kommer fra Ballerup, men min mor valgte
-                    at vi skulle
-                    flytte til Gentofte da jeg gik i tiende klasse på efterskolen. Jeg gik derfor på Aurehøj Gymnasium
+                <p class="reveal"> Jeg hedder Louise og jeg er 22 år gammel. Jeg kommer fra Ballerup, men tilflyttede
+                    til Gentofte med min mJeg gik derfor på Aurehøj Gymnasium
                     og holdte derefter 2 gode sabbatår. Her arbejdede jeg på et håndarbejdsværksted for mennesker med
                     nedsat funktionsevne. Der var fyldt med søde mennesker og jeg lærte rigtig meget af, at være der. I
                     mellemtiden flyttede jeg hjemmefra til Valby i en lille 1 værelses. Efterfølgende er jeg flyttet til
@@ -85,7 +84,7 @@
                     mine søde veninder. De er de vigtigste i mit liv, udover min familie hihi</p>
             </div>
             <div class="portfolie_img  reveal">
-                <img src="img/mig.png" alt="mig">
+                <img src="img/mig.webp" alt="mig">
             </div>
         </div>
 
@@ -424,10 +423,8 @@
             </div>
             <div class="portfolie_img reveal">
                 <img src="img/portfolio_1.webp" alt="">
+                <img src="img/portfolio_2.webp" alt="">
             </div>
-        </div>
-        <div class="portfolie_img reveal">
-            <img src="img/portfolio_2.webp" alt="">
         </div>
         <div class="portfolie_img reveal">
             <img src="img/moodboard_styletile.webp" alt="">
@@ -435,6 +432,10 @@
 
 
     </div>
+
+    <footer>
+        Lavet af Louise Krejler
+    </footer>
 
     <script src="script.js"></script>
 </body>
