--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <div class="two_columns reveal">
             <div class="column1 reveal">
                 <p class="reveal"> Websiteopgaven bestod af, at arbejde videre på et tidligere projekt som kun virkede
-                    på mobilsite. Jeg har i denne opgave
+                    på mobilsite. Jeg har i opgaven
                     arbejdet videre på sitet så det virkede på desktop. Sidens indhold er lavet ud fra et udleveret
                     wireframe, layoutdiagram
                     samt tekst og billeder. Den primære farve på dette site er grøn og er altså den gennemgående farve
@@ -141,7 +141,7 @@
             <div class="column1 reveal">
                 <p class="reveal"> Temaopgaven bestod af, at designe og lave mit eget site om et valgfrit emne. Her
                     valgte jeg at lave en site om mine
-                    yndlings blomster. Dette site besidder stilarten modernisme og herunder minimalisme. Kompositionen
+                    yndlings blomster. Sitet besidder stilarten modernisme og herunder minimalisme. Kompositionen
                     består af få
                     elementer og et stærkt blikfang med mine billeder og stor header. Udtrykket er harmonisk med simple
                     former, rene
@@ -149,12 +149,12 @@
                     udtryk på sitet med
                     blandt andet loven om kontinuitet med linjer som adskiller tekst og billede. Loven om nærhed er også
                     til stede hvis man
-                    kigger på placeringen af overskrifter og brødtekst. Dette hjælper brugeren til at opfatte
+                    kigger på placeringen af overskrifter og brødtekst. Det hjælper brugeren til at opfatte
                     elementerne som relateret til
                     hinanden. Sitet er opbygget med grids for effektivt at kunne organisere mit indhold, uden at skulle
                     tilføje ekstra
                     visuelle elementer. Billederne er på samme måde, som resten af sitet forsøgt at holde minimalistisk
-                    og enkle. Dette
+                    og enkle. Det
                     relaterer sig også til loven om lighed ved at alle siderne ligner hinanden, med samme former, farver
                     og størrelser. Jeg
                     valgte bevidst at alle mine tekster skulle stå med små bogstaver, da jeg synes det gik godt hånd i
@@ -186,7 +186,7 @@
                 GRUNDLÆGGENDE UX
             </h1>
 
-            <h2 class="h2_portfolie">Under temaet grundlæggende UX kom vi nærmere på udviklingen af digitale
+            <h2 class="h2_portfolie">Under temaet grundlæggende UX kom vi nærmere ind på udviklingen af digitale
                 brugergrænseflader. Temaet gav mig en
                 grundlæggende forståelse for samspillet mellem brugere og brugergrænseflader, samt hvilke teorier,
                 værktøjer og metoder
@@ -208,7 +208,7 @@
                     dybere indblik på
                     mit område og var med til at påvirke min udarbejdelse af mit koncept. Mit koncept bestod af at sælge
                     basic unisex tøj.
-                    Afsenderen på sitet er to unge kvinder fra København, som så et mangel på markedet og startede deres
+                    Afsenderen på sitet er to unge kvinder fra København, som så en mangel på markedet og startede deres
                     eget lille firma.
                     Målgruppen til sitet består af både kvinder og mænd i alderen 12-30 år gammel. Det er alle nogle
                     individer som stræber
@@ -269,9 +269,9 @@
             <div class="column1 reveal">
                 <p class="reveal"> Temaopgaven under grundlæggende animation bestod af at lave et interaktivt animeret
                     spil, som jeg selv har designet og
-                    programmeret. Udover spillet så indeholder hjemmesiden også min dokumentation af spillet. Dette
+                    programmeret. Udover spillet så indeholder hjemmesiden også min dokumentation af spillet. Det
                     indebærer både min ide,
-                    det tekniske som aktivitetsdiagram og statemachine diagram og mit grafik. I ide/konceptfasen lavede
+                    det tekniske som aktivitetsdiagram og statemachine diagram og min grafik. I ide/konceptfasen lavede
                     jeg en papirs
                     prototype og skitserede. Undervejs kom jeg tættere på mit endelig design og gik i gang med at
                     designe UI og spil
@@ -307,8 +307,8 @@
             </h1>
 
             <h2 class="h2_portfolie">Teamet grundlæggende indhold gav mig en grundlæggende forståelse for
-                videoproduktion, forarbejdet inden optagelsen,
-                selve optagelsen og postproduktion. Dette brugte jeg i min redesign opgave som jeg lavede i samarbejde
+                videoproduktion, forarbejde inden optagelsen,
+                selve optagelsen og postproduktion. Det brugte jeg i min redesign opgave som jeg lavede i samarbejde
                 med min gruppe.
                 Her brugte vi både video produktion og færdigheder som vi blev præsenteret for i de tidligere temaer.
 
@@ -327,7 +327,7 @@
                     brugerens opmærksomhed
                     til teksten. Denne stil fortsætter når man scroller ned af siden, med billeder fra location som også
                     er sort og hvid.
-                    Dette valgte jeg for at holde siden klassisk og minimalistisk. Sitets komposition er delt op i to
+                    Det valgte jeg for at holde siden klassisk og minimalistisk. Sitets komposition er delt op i to
                     kolonner, hvor
                     nederste billede fylder to rækker.
                 </p>
@@ -354,9 +354,8 @@
                     Tealicious prøver
                     gennem deres hjemmeside at fortælle om bubbletea, at det er sjovt og lækkert. I vores idéudvikling
                     fokuserede vi på at
-                    gøre hjemmesiden nemmere tilgængelig, sammenhængende og sjov. Dette valgte vores BERT test på deres
-                    nuværende
-                    hjemmeside. Vi lavede wireframes, moodboards og et styletile. Vi holdte fast i det meste af det
+                    gøre hjemmesiden nemmere tilgængelig, sammenhængende og sjov. Vi lavede wireframes, moodboards og et
+                    styletile. Vi holdte fast i det meste af det
                     originale copy, vi
                     fokuserede mest på at ændre tonen i copy og gøre den sjovere og mere i øjenhøjde med de kunder de
                     har. Microcopy ændrede
@@ -408,7 +407,8 @@
                     på sitet og giver en
                     mere interessant weboplevelse. Overskrifterne på resten af siden står alle i en serif skrift hvor
                     brødteksten er med en
-                    sans-serif tekst. Det hjælper til at gøre den nemmere læselig - det samme med knapperne. Gestaltlove
+                    sans-serif tekst. Det hjælper til at gøre den nemmere læsevenlig - det samme med knapperne.
+                    Gestaltlove
                     som der blandt
                     andet kommer til udtryk er loven om nærhed. Dette gør den gennem afstanden på de forskellige
                     elementer. Afstanden mellem
