ny om mig tekst

--- a/index.html
+++ b/index.html
@@ -71,17 +71,21 @@
         <h3 class="h3_portfolie reveal">Louise Krejler</h3>
         <div class="two_columns reveal">
             <div class="column1 reveal">
-                <p class="reveal"> Jeg hedder Louise og jeg er 22 år gammel. Jeg kommer fra Ballerup, men tilflyttede
-                    til Gentofte med min mJeg gik derfor på Aurehøj Gymnasium
-                    og holdte derefter 2 gode sabbatår. Her arbejdede jeg på et håndarbejdsværksted for mennesker med
-                    nedsat funktionsevne. Der var fyldt med søde mennesker og jeg lærte rigtig meget af, at være der. I
-                    mellemtiden flyttede jeg hjemmefra til Valby i en lille 1 værelses. Efterfølgende er jeg flyttet til
-                    Amager og startede på Multimediedesigner her til august. Jeg har fået et studiejob på Jobindex hvor
-                    jeg hjælper med at designe deres jobannoncer. Her er jeg omringet af flere som er uddannet
-                    multimediedesigner og andre i samme slags branche. Det er helt vildt fedt at få lov til at få noget
-                    relevant sparring med dem og lære hvordan jeg kan bruge alt det jeg har lært i praksis. Udover det
-                    så elsker jeg at være sammen med mine venner. Ligegyldigt hvad vi laver hygger jeg mig altid med
-                    mine søde veninder. De er de vigtigste i mit liv, udover min familie hihi</p>
+                <p class="reveal"> Jeg hedder Louise og er 22 år gammel. Jeg bor på Amager men kommer oprindeligt fra
+                    Ballerup. Jeg har gået på efterskole
+                    og på gymnasiet i Gentofte på Aurehøj Gymnasium. Efterfølgende har jeg haft to sabbatår. Her
+                    arbejdede jeg på Gentofte
+                    Håndarbejdsværksted, et dagtilbud for borgere med nedsat funktionsevne. Jeg var ansat som omsorgs-
+                    og pædagogmedhjælper
+                    og de to år jeg var der lærte jeg en masse og mødte mange søde mennesker. Efter to år var det tid
+                    til at søge
+                    uddannelse og det blev Multimediedesigner på KEA. Jeg har altid haft Multimediedesigner i baghovedet
+                    og jeg var også til
+                    besøgsaften og høre om uddannelsen da jeg gik på gymnasiet. Så i 2022 blev det tid og jeg tog et
+                    HTML og CSS-kursus og
+                    søgte ind. Nu er første semester snart slut og jeg er virkelig glad for min tid på KEA indtil
+                    videre. Se nærmere på
+                    siden for at se mine projekter fra første semester.</p>
             </div>
             <div class="portfolie_img  reveal">
                 <img src="img/mig.webp" alt="mig">
