--- a/index.html
+++ b/index.html
@@ -6,10 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.typekit.net/qnl3pma.css">
-    <link rel="stylesheet" href="https://use.typekit.net/qnl3pma.css">
-    <link rel="stylesheet" href="https://use.typekit.net/qnl3pma.css">
-    <link rel="stylesheet" href="https://use.typekit.net/qnl3pma.css">
-
     <link rel="stylesheet" href="style.css">
     <title>Forside</title>
 </head>
@@ -46,10 +42,6 @@
             </div>
         </nav>
     </header>
-
-
-
-
 
     <section>
         <div class="h1_forside outline">
@@ -137,9 +129,8 @@
             <div class="portfolie_img  reveal">
                 <img src="img/website.webp" alt="website">
             </div>
-
-
         </div>
+
         <h3 class="h3_portfolie reveal">Emnesite</h3>
         <div class="two_columns reveal">
             <div class="column1 reveal">
@@ -176,11 +167,9 @@
             <div class="portfolie_img  reveal">
                 <img src="img/emnesite_1.webp" alt="">
             </div>
-
-
         </div>
-        <img class="portfolie_img reveal" src="img/emnesite_2.webp" alt="">
 
+        <img class="portfolie_img reveal" src="img/emnesite_2.webp" alt="">
 
         <div id="ux">
         </div>
@@ -289,7 +278,8 @@
                     i toppen og flere
                     andre ting.
                 </p>
-                <a class="knap" href="https://louisekrejler.dk/kea/04_animation/website/spil.html" target="_blank"> Link
+                <a class="knap_2" href="https://louisekrejler.dk/kea/04_animation/website/spil.html" target="_blank">
+                    Link
                     til site
                 </a>
 
@@ -386,11 +376,11 @@
 
         <div class="scrolling_text reveal">
             <h1 class="h1_portfolie reveal">
-                PORTFOLIO EKSAMEN
+                FØRSTE SEMESTER EKSAMEN
             </h1>
         </div>
 
-        <h3 class="h3_portfolie reveal">Portfolio eksamen</h3>
+        <h3 class="h3_portfolie_portfoilo reveal">Portfolio eksamen</h3>
         <div class="two_columns reveal">
             <div class="column1 reveal">
                 <p class="reveal"> Min portfolio site blev udarbejdet gennem blandt andet moodboards, mockups,
@@ -421,7 +411,7 @@
                     relevant, da den er med til at fortælle hvilke elementer der er overskrifter, læsetekst og links, da
                     alt dette er
                     grupperet ens på hele sitet.</p>
-                <a class="knap" href="https://xd.adobe.com/view/5b29d12f-a8af-46da-841a-3a5692d80e07-0e7a/"
+                <a class="knap_2" href="https://xd.adobe.com/view/5b29d12f-a8af-46da-841a-3a5692d80e07-0e7a/"
                     target="_blank"> Se mere
                 </a>
             </div>
