--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 Om mig
             </h1>
         </div>
-        <h3 class="h3_portfolie reveal">Louise Krejler</h3>
+        <h3 class="h3_portfolie_1 reveal">Louise Krejler</h3>
         <div class="two_columns reveal">
             <div class="column1 reveal">
                 <p class="reveal"> Jeg hedder Louise og er 22 år gammel. Jeg bor på Amager men kommer oprindeligt fra
@@ -103,7 +103,7 @@
             </h2>
         </div>
 
-        <h3 class="h3_portfolie reveal">Website</h3>
+        <h3 class="h3_portfolie_1 reveal">Website</h3>
         <div class="two_columns reveal">
             <div class="column1 reveal">
                 <p class="reveal"> Websiteopgaven bestod af, at arbejde videre på et tidligere projekt som kun virkede
@@ -188,7 +188,7 @@
             </h2>
         </div>
 
-        <h3 class="h3_portfolie reveal">Løsning og pitch</h3>
+        <h3 class="h3_portfolie_1 reveal">Løsning og pitch</h3>
         <div class="two_columns reveal">
             <div class="column1 reveal">
                 <p class="reveal"> Temaopgaven under grundlæggende UX bestod af at designe en webshop, der sælger
@@ -257,7 +257,7 @@
             </h2>
         </div>
 
-        <h3 class="h3_portfolie reveal">Temaopgave</h3>
+        <h3 class="h3_portfolie_1 reveal">Temaopgave</h3>
         <div class="two_columns reveal">
             <div class="column1 reveal">
                 <p class="reveal"> Temaopgaven under grundlæggende animation bestod af at lave et interaktivt animeret
@@ -310,7 +310,7 @@
             </h2>
         </div>
 
-        <h3 class="h3_portfolie reveal">Pilotsite</h3>
+        <h3 class="h3_portfolie_1 reveal">Pilotsite</h3>
         <div class="two_columns reveal">
             <div class="column1 reveal">
                 <p class="reveal"> Pilotsitet bestod af, at jeg skulle præsentere min video jeg optog med min gruppe men
