små rettelser i tekst og css

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="two_columns reveal">
             <div class="column1 reveal">
                 <p class="reveal"> Jeg hedder Louise og er 22 år gammel. Jeg bor på Amager men kommer oprindeligt fra
-                    Ballerup. Jeg har gået på efterskole
+                    Ballerup. Jeg har gået på efterskole i Svendborg
                     og på gymnasiet i Gentofte på Aurehøj Gymnasium. Efterfølgende har jeg haft to sabbatår. Her
                     arbejdede jeg på Gentofte
                     Håndarbejdsværksted, et dagtilbud for borgere med nedsat funktionsevne. Jeg var ansat som omsorgs-
@@ -99,7 +99,7 @@
                 og arbejdede med
                 mobile first tilgang. Der blev brugt CSS grid og media queries. Alle disse ting brugte jeg i mine to
                 projekter under
-                dette tema. Nedenfor står der tydeligere beskrevet til hvert projekt.
+                dette tema. Nedenfor står det tydeligere beskrevet til hvert projekt.
             </h2>
         </div>
 
@@ -134,7 +134,7 @@
         <h3 class="h3_portfolie reveal">Emnesite</h3>
         <div class="two_columns reveal">
             <div class="column1 reveal">
-                <p class="reveal"> Temaopgaven bestod af, at designe og lave mit eget site om et valgfrit emne. Her
+                <p class="reveal"> Emnesite opgaven bestod af, at designe og lave mit eget site om et valgfrit emne. Her
                     valgte jeg at lave en site om mine
                     yndlings blomster. Sitet besidder stilarten modernisme og herunder minimalisme. Kompositionen
                     består af få
@@ -195,7 +195,7 @@
                     t-shirts. Fokusset for opgaven var
                     brugergrænsefladen og brugeroplevelsen altså design af UI og UX-elementer til min webshop. Jeg
                     brugte forskellige
-                    researchmetoder til min indsamling af data. Jeg gjorde både brug af, desk research , observation,
+                    researchmetoder til min indsamling af data. Jeg gjorde både brug af, desk research, observation,
                     interview og survey
                     for at undersøge mit område nærmere. De forskellige research metoder var alle med til at give mig et
                     dybere indblik på
@@ -397,7 +397,7 @@
                     Overskriften på forsiden
                     er sat i en sans-serif skrift og er kun farvet i outlinen. Den er kraftig og stor og føles næsten
                     som om det bliver råbt
-                    til en. Overskriften bliver brudt i midten med en serif skrift som er med til at skabe en kontrast
+                    til en. Overskriften bliver brudt i midten med en serif skrift, som er med til at skabe en kontrast
                     på sitet og giver en
                     mere interessant weboplevelse. Overskrifterne på resten af siden står alle i en serif skrift hvor
                     brødteksten er med en
